--- a/style.css
+++ b/style.css
@@ -31,15 +31,32 @@ span{color:#75B79E;
     justify-content: center;   
     align-items: center;
     border-radius: 5px; 
+    position: relative;
+    transform-style: preserve-3d;
+    transition:all .5s;
 }
 
 img{ width: 100px;
     height:100px;
 }
 
-.escondido{
-    display:none;
+.frente,
+.tras{width:100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    backface-visibility: hidden;   
 }
+
+.cartas.virar{transform: rotateY(180deg);
+}
+
+.tras{transform: rotateY(-180deg);
+
+}
+
+
+
 
 
 @media (max-width: 600px){
